changing logos on footer css

--- a/style/footer.css
+++ b/style/footer.css
@@ -7,7 +7,6 @@ footer {
     align-items: end;
     flex-direction: column;
     bottom: -71vw;
-    left: -0.7vw;
     margin: 5vw 0;
     width: 101vw;
     height: 20vw;
@@ -52,16 +51,16 @@ footer {
     top: 5vw;
 }
 
-.logos img:first-child {
+.logos a:first-child img {
     width: 5vw;
 }
 
-.logos img {
+.logos a img {
     width: 10vw;
     padding: 0 1vw;
 }
 
-.logos img:nth-child(2) {
+.logos a:nth-child(2) img {
     border-color: #fff;
     border-left: 0.1vw solid;
 }
