--- a/style/content.css
+++ b/style/content.css
@@ -245,3 +245,11 @@
     position: relative;
 }
 
+.element {
+    display: flex;
+    justify-content: center;
+}
+
+.element img {
+    margin: auto;
+}
