--- a/style/menu.css
+++ b/style/menu.css
@@ -30,11 +30,36 @@ footer {
 
 .articles {
     width: 30%;
-    height: 75%;
+    height: 85%;
     position: relative;
     background-color: rgba(18,18,18,0.8);
-    box-shadow: 0px 3px 7px 0px rgb(0 0 0 / 35%);
+    box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
     border-radius: 4px;
+    cursor: pointer;
+}
+
+.articles > div {
+    margin: 5%;
+    height: 90%;
+    width: 90%;
+}
+
+.articles div div {
+    overflow: hidden;
+}
+
+.new_articles_img {
+    width: 100%;
+    transition: transform .5s ease;
+}
+
+.new_articles_img:hover {
+    transform: scale(1.1);
+}
+
+.new_articles_content {
+    font-family: Helvetica, serif;
+    text-shadow: None;
 }
 
 /* NEW CHARACTERS */
