--- a/style/main.css
+++ b/style/main.css
@@ -232,7 +232,7 @@ a.icon_navbar:hover:after {
     z-index: 9999;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: #242f3f;
@@ -269,4 +269,3 @@ a.icon_navbar:hover:after {
     75% { height: 100%;}
     100% { height: 0%;}
 }
-
