--- a/style/menu.css
+++ b/style/menu.css
@@ -73,8 +73,19 @@ footer {
     background-size: cover!important;
 }
 
-.list_new_characters img {
+.list_new_characters > img {
     position: absolute;
     width: 100%;
     bottom: 100%;
+}
+
+.list_new_characters > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.list_new_characters > div img {
+    width: 55vw;
 }
