--- a/style/content.css
+++ b/style/content.css
@@ -120,7 +120,7 @@
     transition: all 0.3s;
 }
 
-.weaponsContent strong {
+strong {
     color: #7ee4e3;
 }
 
@@ -259,4 +259,18 @@
 
 .element img {
     margin: auto;
+}
+
+.table-image-count {
+    position: absolute;
+    right: 10px;
+    bottom: 0;
+    background: #222431;
+    font-weight: 600;
+    padding: 1px 6px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom-right-radius: 4px;
+    border-top-left-radius: 4px;
 }
