--- a/style/main.css
+++ b/style/main.css
@@ -35,7 +35,8 @@ body {
 }
 
 
-.nav_icon_header:hover/*, .dropdown:hover .nav_icon_header*/ {
+.nav_icon_header:hover /*, .dropdown:hover .nav_icon_header*/
+{
     transform: scale(1.04);
     filter: brightness(1);
 }
@@ -90,7 +91,7 @@ body {
 }
 
 .open-characters {
-    height : 200px;
+    height: 200px;
 }
 
 .dropdown {
@@ -236,10 +237,11 @@ a.icon_navbar:hover:after {
     top: 0;
     left: 0;
     background-color: #242f3f;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .loader {
     display: inline-block;
     width: 30px;
@@ -248,6 +250,7 @@ a.icon_navbar:hover:after {
     border: 4px solid #Fff;
     animation: loader 2s infinite ease;
 }
+
 .loader-inner {
     vertical-align: top;
     display: inline-block;
@@ -255,17 +258,39 @@ a.icon_navbar:hover:after {
     background-color: #fff;
     animation: loader-inner 2s infinite ease-in;
 }
+
 @keyframes loader {
-    0% { transform: rotate(0deg);}
-    25% { transform: rotate(180deg);}
-    50% { transform: rotate(180deg);}
-    75% { transform: rotate(360deg);}
-    100% { transform: rotate(360deg);}
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(180deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    75% {
+        transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
+
 @keyframes loader-inner {
-    0% { height: 0%;}
-    25% { height: 0%;}
-    50% { height: 100%;}
-    75% { height: 100%;}
-    100% { height: 0%;}
+    0% {
+        height: 0%;
+    }
+    25% {
+        height: 0%;
+    }
+    50% {
+        height: 100%;
+    }
+    75% {
+        height: 100%;
+    }
+    100% {
+        height: 0%;
+    }
 }
