--- a/style/news.css
+++ b/style/news.css
@@ -10,19 +10,23 @@ body {
 
 .all_articles {
     width: 70vw;
-    position: absolute;
+    position: relative;
     left: 10vw;
     padding: 10vh 5vw;
     background-color: #f0f0f0;
 }
 
-.single_articles a {
-    position: relative;
-    max-width: 100%;
-    height: 15vh;
+.single_articles {
+    height: 7vw;
     margin: 1vw 0;
     padding: 1% 1.5%;
+}
+
+.single_articles a {
+    position: relative;
+    height: 100%;
     border-radius: 0.5vw;
+    padding: 1% 1.5%;
     display: flex;
     border: solid 3px rgba(57, 59, 64, 0);
     transition: border-color 0.2s linear;
@@ -36,9 +40,40 @@ body {
     border-color: rgba(57, 59, 64, 0.15);
 }
 
-.single_articles img {
-    margin-right: 2%;
-    max-width: 28%;
+/* ALL THE ARTICLES IMAGES */
+.articles_img {
+    width: 24%;
+    height: 100%;
+}
+
+.articles_img:first-of-type {
+    background-image: url("../images/news/first.png");
+    background-size: cover;
+}
+
+.articles_img:nth-of-type(2) {
+    background-image: url("../images/news/second.jpg");
+    background-size: cover;
+}
+
+.articles_img:nth-of-type(3) {
+    background-image: url("../images/news/third.jpg");
+    background-size: cover;
+}
+
+.articles_img:nth-of-type(4) {
+    background-image: url("../images/news/forth.jpg");
+    background-size: cover;
+}
+
+.articles_img:nth-of-type(5) {
+    background-image: url("../images/news/fifth.jpg");
+    background-size: cover;
+}
+
+.articles_img:nth-of-type(6) {
+    background-image: url("../images/news/first.png");
+    background-size: cover;
 }
 
 .articles_content {
@@ -49,6 +84,7 @@ body {
     justify-content: start;
     font-family: 'Heebo', sans-serif;
     text-shadow: None;
+    margin-left: 2%;
 }
 
 .articles_content h2 {
