--- a/style/main.css
+++ b/style/main.css
@@ -294,3 +294,10 @@ a.icon_navbar:hover:after {
         height: 0%;
     }
 }
+
+.bmp_logo img {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    filter: drop-shadow(0 0 1rem black) opacity(80%);
+}
