changed index background wallpaper

--- a/style/main.css
+++ b/style/main.css
@@ -299,5 +299,5 @@ a.icon_navbar:hover:after {
     position: absolute;
     left: 0;
     height: 100%;
-    filter: drop-shadow(0 0 1rem black) opacity(80%);
+    filter: drop-shadow(0 0 1rem black) opacity(80%) grayscale(0.5);
 }
