--- a/style/news.css
+++ b/style/news.css
@@ -99,3 +99,39 @@ body {
     font-size: 80%;
 }
 
+/* SINGLE ARTICLE PAGES */
+
+.background_articles {
+    background-color: #f0f0f0;
+    position: relative;
+    width: 70%;
+    left: 7.5%;
+    display: flex;
+    flex-direction: column;
+    padding: 9% 5%;
+    border-left: #e8cba7 solid 6px;
+    border-right: #e8cba7 solid 6px;
+    text-shadow: none;
+}
+
+.articles {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: #7d7d7d;
+}
+
+.articles span {
+    margin: 5% 0;
+    width: 100%;
+}
+
+.header_articles {
+    color: #333;
+    font-size: 3vw;
+}
+
+.date_articles {
+    color: #999;
+    margin-top: 2%;
+}
