--- a/style/content.css
+++ b/style/content.css
@@ -1,5 +1,5 @@
 .lore {
-    font-size: 1.25vw;
+    font-size: 110%;
     background-color: rgba(13, 14, 14, 0.55);
     box-shadow: rgb(0 0 0 / 35%) 0px 0px 10px 8px;
     border: 0.2vw solid white;
@@ -223,6 +223,10 @@ strong {
     display: none;
     width: 100%;
     justify-content: center;
+}
+
+.talentPass {
+    justify-content: space-between!important;
 }
 
 .talentPass div {
