added responsive properties on index page

--- a/style/menu.css
+++ b/style/menu.css
@@ -25,7 +25,7 @@
 
 .articles {
     width: 30%;
-    height: 85%;
+    height: 31vw;
     position: relative;
     background-color: rgba(18, 18, 18, 0.8);
     box-shadow: 0 3px 7px 0 rgb(0 0 0 / 35%);
